test/fixtures/compile/if/if.blk.assign.we.error
SyntaxError: Expecting "NewLine" or "EOF" but got "i" (fixtures/compile/if/if.blk.assign.we.ks:3:7)